--- a/mem-service/membership-dev.yml
+++ b/mem-service/membership-dev.yml
@@ -1,10 +1,10 @@
-member:
- rent:
-  min: 8
-  max: 31
- price:
-  discount: 3
-vehicle:
+assessment:
+ date:
+  start: 8/12/2010
+  end: 31/12/2019
+ item:
+  itemcount: 30
+scheduleselection:
  default:
-  model: cross over
-duration: all
+  type: all students scheduled
+methodofdelivary: online
