--- a/application.yml
+++ b/application.yml
@@ -1,12 +1,12 @@
-member:
- rent:
-  min: 5
-  max: 40
- price:
-  discount: 3.5
-vehicle:
- default:
-  model: cross over
-duration: winter
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/starsdb?createDatabaseIfNotExist=true
+    username: root
+    password: siva6878$
+    driver-class-name: com.mysql.jdbc.Driver
+  jpa:
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
