--- a/application.yml
+++ b/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/starsdb?createDatabaseIfNotExist=true
-    username: root
-    password: siva6878$
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:sqlserver://10.2.20.26:1433;databaseName=stars_QA; 
+    driver-class-name:com.microsoft.sqlserver.jdbc.SQLServerDriver
+    username: devuser
+    password: Free$o)a19
   jpa:
     hibernate:
       naming:
