--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:sqlserver://10.2.20.26:1433;databaseName=stars_QA; 
+    url: jdbc:sqlserver://10.2.20.26:1433;databaseName=stars_QA
     driver-class-name:com.microsoft.sqlserver.jdbc.SQLServerDriver
     username: devuser
     password: Free$o)a19
